--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,17 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.box-animate {
+  border-radius: 10px;
+  animation: glow 3s infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 5px #fffbef;
+  }
+
+  100% {
+    box-shadow: 0 0 20px 10px #fffbef;
+  }
+}
